# proctor

./: .gitignore  CMakeLists.txt  readme.markdown
include/proctor/: agent.h  config.h  detector.h  ia_ransac_sub.h  proctor.h
include/proctor/impl/: ia_ransac_sub.hpp
plotting/: evaluation.py  hinton_demo.py  main.py
results/: model_names.txt
results/psb/: fpfh.random.out
results/wgdb/: model_names.txt
src/: agent.cpp  detector.cpp  main.cpp  proctor.cpp  scanner.cpp
writeups/: fpfh.out  fpfh.wgdb.out  model_names.txt  pfh.out  pfh.random.out  shot.wgdb.out  spin_image.out
writeups/figures/: architecture.odg
writeups/icra12/: README  architecture.tex  cp_sergeyk_bib.sh  evaluation.tex  intro_and_related_work.tex  misc.bib  report.tex  sergeyk-icra12.bib
writeups/psb/: fpfh3.out  pfh.out  shot.out
writeups/results/: PFH-FPFH-SHOT-SPIN_IMAGE_features.tex  PFH-FPFH-SHOT-SPIN_IMAGE_features_preview.tex  PFH-FPFH-SHOT-SPIN_IMAGE_table.tex  PFH-FPFH-SHOT-SPIN_IMAGE_table_preview.tex  PSB_PFH-FPFH-SHOT-SPIN_IMAGE_features.tex  PSB_PFH-FPFH-SHOT-SPIN_IMAGE_features_preview.tex  PSB_PFH-FPFH-SHOT-SPIN_IMAGE_table.tex  PSB_PFH-FPFH-SHOT-SPIN_IMAGE_table_preview.tex  WGDB_PFH-FPFH-SHOT-SPIN_IMAGE_features.tex  WGDB_PFH-FPFH-SHOT-SPIN_IMAGE_features_preview.tex  WGDB_PFH-FPFH-SHOT-SPIN_IMAGE_table.tex  WGDB_PFH-FPFH-SHOT-SPIN_IMAGE_table_preview.tex
writeups/wgdb/: pfh.out  spin.out
